# clBool

./: .gitignore  CMakeLists.txt  README.md  aocl_diagnose.txt  clinfo.out  dirs.sh  env.txt  list_boards.txt  set_ocl_version.sh  update_spbench.bat  update_spbla.bat
fpga_reports/add_last_report/lib/: product_data.js  quartus_data.js  report_data.js  viewer_data.js
fpga_reports/add_last_report/lib/json/: area.json  area_src.json  block.json  info.json  lmv.json  loop_attr.json  loops.json  mav.json  new_lmv.json  pipeline.json  quartus.json  schedule.json  summary.json  tree.json
fpga_reports/merge_path/lib/: report_data.js  viewer_data.js
fpga_reports/merge_path/lib/json/: area.json  area_src.json  block.json  info.json  lmv.json  loop_attr.json  mav.json  tree.json
fpga_reports/merge_path/reports/lib/: product_data.js  quartus_data.js  report_data.js
fpga_reports/mult_last_report/lib/: product_data.js  quartus_data.js  report_data.js  viewer_data.js
fpga_reports/mult_last_report/lib/json/: area.json  area_src.json  block.json  info.json  lmv.json  loop_attr.json  loops.json  mav.json  new_lmv.json  pipeline.json  quartus.json  schedule.json  summary.json  tree.json
fpga_reports/prefix_sum/reports/lib/: product_data.js  quartus_data.js  report_data.js  viewer_data.js
fpga_reports/prepare_positions/reports/lib/: product_data.js  (+3 more)
fpga_reports/reports/lib/: product_data.js  quartus_data.js  report_data.js  viewer_data.js
include/: clbool.hpp
libs/: CMakeLists.txt
libs/clew/CL/: opencl.hpp
libs/gpu/: CMakeLists.txt
libs/gpu/libgpu/: make_source_map.cpp
libs/utils/libutils/: logger.h  timer.h
log/: log_FPGA.txt  log_FPGA_merge_path.txt  log_FPGA_mult_with_kernels_tasks.txt  log_FPGA_prefix_sum.txt  log_GPU.txt  log_GPU_merge_path.txt  log_GPU_prefix_sum.txt  log_latest_pref_sum.txt
reports/lib/: product_data.js  quartus_data.js  report_data.js  table.js  viewer_data.js
reports/lib/js/: tree.js
reports/lib/json/: area.json  area_src.json  block.json  info.json  loop_attr.json  loops.json  mav.json  new_lmv.json  pipeline.json  quartus.json  schedule.json  summary.json  tree.json  warnings.json
reports/reports/lib/: product_data.js  viewer_data.js
src/: cl2.hpp  cl_defines.hpp  convolution.cpp  main.cpp  utils.cpp  utils.hpp
src/COO/: coo_initialization.cpp  coo_initialization.hpp  coo_kronecker_product.cpp  coo_matrix_addition.cpp  coo_matrix_addition.hpp  coo_utils.cpp  coo_utils.hpp  main_coo.cpp
src/COO/cl/: coo_bitonic_sort.cl  coo_kronecker.cl  merge_path.cl  prefix_sum.cl  prepare_positions.cl  set_positions.cl
src/cl/: clion_defines.cl  coo_kronecker.cl  coo_reduce_duplicates.cl  csr_addition.cl  dcsr_kronecker.cl  dscr_to_coo.cl  merge_large_rows.cl  merge_path.cl  prepare_positions.cl  set_positions.cl  simple_addition.cl
src/cl/fpga/: bitonic_esc.cl  copy_one_value.cl  count_workload.cl  heap_merge.cl  merge_large_rows.cl  merge_path.cl  prefix_sum.cl  prepare_positions.cl  set_positions.cl  simple_addition.cl  simple_addition_branch.cl  to_result_matrix_single_thread.cl  to_result_matrix_work_group.cl  update_pref_sum.cl
src/cl/hash/: hash_global.cl  hash_pwarp.cl  hash_tb.cl
src/cl/headers/: coo_bitonic_sort.h  coo_kronecker.h  count_workload.h  dcsr_kronecker.h  dscr_to_coo.h  hash_pwarp.h  headers_map.hpp  merge_large_rows.h  prefix_sum.h  prepare_positions.h  set_positions.h
src/common/: cl_includes.hpp  cl_operations.cpp  cl_operations.hpp  cpu_matrix_operations.cpp  env.cpp  matrices_conversions.cpp  matrices_conversions.hpp  utils.cpp  utils.hpp
src/coo/: coo.hpp  coo_initialization.cpp  coo_initialization.hpp  coo_kronecker_product.cpp  coo_kronecker_product.hpp  coo_matrix_addition.cpp  coo_matrix_addition.hpp  coo_matrix_multiplication.cpp  coo_matrix_multiplication.hpp  coo_utils.cpp  coo_utils.hpp  dscr_matrix_multiplication.cpp  dscr_matrix_multiplication.hpp  main_coo.cpp
src/coo/cl/: bitonic_esc.cl  clion_defines.cl  coo_kronecker.cl  copy_one_value.cl  count_workload.cl  heap_merge.cl  merge_large_rows.cl  merge_path.cl  merge_rows.cl  new_merge.cl  prefix_sum.cl  prepare_positions.cl  set_positions.cl  to_result_matrix_single_thread.cl  to_result_matrix_work_group.cl
src/coo/test/: check_objects_copying.cpp  coo_addition_test.cpp  coo_bitonic_test.cpp  coo_kronecker_test.cpp  coo_reduce_duplicates_test.cpp  coo_tests.hpp  coo_to_dcsr_test.cpp  count_workload_and_allocation_test.cpp  count_workload_test.cpp  esc_kernels_test.cpp  heap_and_copy_kernels_test.cpp  heap_kernels_test.cpp  large_rows_test.cpp  multiplication_test.cpp  test_half_sized_scan.cpp  test_multiplication.cpp  test_new_merge.cpp
src/core/: controls.hpp  cpu_matrices.hpp  error.hpp  kernel_cache.hpp  matrix_coo.cpp  program.hpp
src/csr/: csr.hpp  csr_addition.cpp
src/dcsr/: dcsr.hpp  dcsr_kronecker_product.cpp  dcsr_matrix_addition.cpp  dcsr_matrix_multiplication.cpp  dcsr_matrix_multiplication.hpp  dcsr_matrix_multiplication_hash.cpp  dcsr_matrix_multiplication_hash.hpp  dcsr_reduce.cpp  dcsr_submatrix.cpp  dcsr_transpose.cpp  dscr_matrix_multiplication.cpp  dscr_matrix_multiplication.hpp  plan
src/example/: convolution.hpp  main.cpp
src/example/cl/: clion_defines.cl  convolution.cl
src/fpga/: hello_world.cpp
src/library_classes/: controls.hpp  cpu_matrices.hpp  matrix_base.hpp  matrix_coo.cpp  matrix_coo.hpp  matrix_csr.hpp  matrix_dcsr.hpp  program.hpp
src/test/: check_objects_copying.cpp  coo_addition_test.cpp  coo_bitonic_test.cpp  coo_kronecker_test.cpp  coo_reduce_duplicates_test.cpp  coo_tests.hpp  coo_to_dcsr_test.cpp  count_workload_and_allocation_test.cpp  count_workload_test.cpp  heap_kernels_test.cpp  test_merge.cpp  test_multiplication.cpp  test_pref_sum.cpp  test_reduce.cpp  test_submatrix.cpp  test_transpose.cpp
test/: CMakeLists.txt  check_test_utils.cpp  test_conversions.cpp  test_errors.cpp  test_operations.cpp  test_pieces.cpp  test_procedures.cpp
test/src/: clBool_tests.cpp  clBool_tests.hpp  conversions.cpp  convertions.cpp  kronecker.cpp  operations.cpp  pieces.cpp  procedures.cpp  tests.hpp
(+135 files in other folders)
